--- a/ME314_assignment11.Rmd
+++ b/ME314_assignment11.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Assignment 10 - Topic Models"
+title: "Assignment 11 - Topic Models"
 author: "Jack Blumenau"
 output: html_document
 ---
 
 You will need to load the following libraries (you may also want to set the random number seed to make everything replicable):
-```{r, eval=T, message = F}
+```{r, eval=T, message = F, warning=FALSE}
 library(quanteda)
 library(topicmodels)
 library(lda)
@@ -28,28 +28,24 @@ load("hoc_speeches.Rdata")
 
 ```
  
- (a) Inspect the `data.frame` object `speeches` and produce some summary statistics.
- (b) Use the functions in the `quanteda` package to turn this data into a `corpus` object. Attach the relevant metadata as `docvars`.
- (c) Turn this corpus into a document-feature matrix. You will need to do some pre-processing if you don't want to wait days for your topic model to coverge. Think about some of the following:
- 
-    (i) Unigrams? 
-    (ii) Stopwords?
-    (iii) Stemming?
-    (iv) Very infrequent words?
+1. Inspect the `data.frame` object `speeches` and produce some summary statistics.
+1. Use the functions in the `quanteda` package to turn this data into a `corpus` object. Attach the relevant metadata as `docvars`.
+1. Turn this corpus into a document-feature matrix. You will need to do some pre-processing if you don't want to wait days for your topic model to coverge. Think about some of the following:
+
+  - Unigrams? 
+  - Stopwords?
+  - Stemming?
+  - Very infrequent words?
     
 (If you get stuck, refer to yesterday's problem set for some tips.)
 
- (c) Run a structural topic model (STM) for this corpus, using the `gender` variable in the topic prevalence argument. Use the `stm` function to do this. Set the `seed` argument to `stm` to be equal to `123`. Be aware, this takes about 15 minutes to run on Jack's laptop -- for testing purposes you might want to set the maximum iterations for the stm to be some low number (`max.em.its = 10` for instance).
+4. Run a structural topic model (STM) for this corpus, using the `gender` variable in the topic prevalence argument. Use the `stm` function to do this. Set the `seed` argument to `stm` to be equal to `123`. Be aware, this takes about 15 minutes to run on Jack's laptop -- for testing purposes you might want to set the maximum iterations for the stm to be some low number (`max.em.its = 10` for instance).
 
-    (ii) Specify and estimate the `stm` model:
-
-    (iii) Use the `plot` function on your estimated `stm` object to see the top topic words with their corpus frequency
-
-    (iv) Examine the top words from each topic using `labelTopics`
-
-    (v) Find the top three documents associated with each topic. Do these make sense given the words you have used to describe that topic? (Hint: in the estimated `stm` object, the document-topic probabilities are stored in `theta`) Report the top speeches for one selected topic.
-
-    (vi) Use the `estimateEffect` and `plot.estimateEffect` functions in the `stm` package to estimate the effect of MP gender on topic usage. On which topics are women, on average, more active? 
+  - Specify and estimate the `stm` model:
+  - Use the `plot` function on your estimated `stm` object to see the top topic words with their corpus frequency
+  - Examine the top words from each topic using `labelTopics`
+  - Find the top three documents associated with each topic. Do these make sense given the words you have used to describe that topic? (Hint: in the estimated `stm` object, the document-topic probabilities are stored in `theta`) Report the top speeches for one selected topic.
+  - Use the `estimateEffect` and `plot.estimateEffect` functions in the `stm` package to estimate the effect of MP gender on topic usage. On which topics are women, on average, more active? 
 
 (If you get stuck on this question, there is some example code in Jack's lecture notes. Also, the `stm` documentation is very good!)
 
@@ -58,7 +54,7 @@ load("hoc_speeches.Rdata")
 **movies corpus**.  Here we will use the very impressive `LDAvis` library in conjunction with the `lda::lda.collapsed.gibbs.sampler()` function from the `lda` package. The following code is used to demonstate how the parliamentary speeches interactive visualisation example was created for in the lecture. Your task is to implement this for the `movies` corpus.
 
 First we construct the relevant `dfm` and estimate the `lda` model.
-```{r, eval=TRUE}
+```{r, eval=FALSE}
 ## Create a corpus of speeches
 speechCorpus <- corpus(speeches$speech)
 
@@ -88,7 +84,7 @@ fit <- lda.collapsed.gibbs.sampler(documents = speechDfmlda$documents, K = K,
                                        compute.log.likelihood = TRUE)
  t2 <- Sys.time() # End timer
  
- t2 - t1  # about 15 minutes on Jack's MacBook Pro
+ t2 - t1  # about 10 minutes on Jack's MacBook Pro
 
 
 ```
@@ -106,7 +102,7 @@ json <- createJSON(phi = t(apply(t(fit$topics) + eta, 2, function(x) x/sum(x))),
 serVis(json, out.dir = "exampleVis", open.browser = TRUE)
 ```
 
-  a.  You will need to load the data from the `quanteda.corpora` package which is hosted on GitHub: 
+1. You will need to load the data from the `quanteda.corpora` package which is hosted on GitHub: 
     
 ```{r}
 library(devtools)
@@ -114,7 +110,7 @@ library(devtools)
 data(data_corpus_movies, package = "quanteda.corpora")
 ```
     
-  b.  Adapt the code above to produce an interactive visualisation of the `movies` corpus. 
+2. Adapt the code above to produce an interactive visualisation of the `movies` corpus. 
     
-  c.  Describe a few topics as you see them.  Is there a "scary movie" topic?  Is there a "science fiction" topic?  Figure out how to convert the interactive plot into a static figure, and include these in your answer.
+3. Describe a few topics as you see them.  Is there a "scary movie" topic?  Is there a "science fiction" topic?  Figure out how to convert the interactive plot into a static figure, and include these in your answer.
     
