--- a/ME314_assignment11.Rmd
+++ b/ME314_assignment11.Rmd
@@ -5,13 +5,14 @@ output: html_document
 ---
 
 You will need to load the following libraries (you may also want to set the random number seed to make everything replicable):
-```{r, eval=T, message = F, warning=FALSE}
+```{r, eval=T, message = F}
 library(quanteda)
 library(topicmodels)
-library(lda)
 library(LDAvis)
 library(stm)
 library(knitr)
+library(lda)
+library(servr)
 set.seed(221186)
 ```
 
@@ -21,48 +22,63 @@ In this question we are going to use topic modelling to understand how parliamen
 
 You will need to make sure that the file `hoc_speeches.Rdata` is in your current working directory, and then use the following command to read this data into `R`.
 
-
-```{r, message = FALSE}
-
+```{r, eval = FALSE, message = FALSE, echo = TRUE}
 load("hoc_speeches.Rdata")
-
 ```
  
-1. Inspect the `data.frame` object `speeches` and produce some summary statistics.
-1. Use the functions in the `quanteda` package to turn this data into a `corpus` object. Attach the relevant metadata as `docvars`.
-1. Turn this corpus into a document-feature matrix. You will need to do some pre-processing if you don't want to wait days for your topic model to coverge. Think about some of the following:
+(a) Inspect the `data.frame` object `speeches` and produce some summary statistics.
 
-  - Unigrams? 
-  - Stopwords?
-  - Stemming?
-  - Very infrequent words?
-    
-(If you get stuck, refer to yesterday's problem set for some tips.)
+(b) Use the functions in the `quanteda` package to turn this data into a `corpus` object.
 
-4. Run a structural topic model (STM) for this corpus, using the `gender` variable in the topic prevalence argument. Use the `stm` function to do this. Set the `seed` argument to `stm` to be equal to `123`. Be aware, this takes about 15 minutes to run on Jack's laptop -- for testing purposes you might want to set the maximum iterations for the stm to be some low number (`max.em.its = 10` for instance).
+(c) Turn this corpus into a tokens object and then into a document-feature matrix. At a minimum, you should remove punctuation and numbers from the texts when constructing the `tokens` object (`remove_punct =T` & `remove_numbers = T`) but you may also want to do some additional pre-processing if you don't want to wait days for your topic model to coverge. Think about some of the following:
+ 
+    (i) Unigrams? 
+    (ii) Stopwords?
+    (iii) Stemming?
+    (iv) Very infrequent words?
 
-  - Specify and estimate the `stm` model:
-  - Use the `plot` function on your estimated `stm` object to see the top topic words with their corpus frequency
-  - Examine the top words from each topic using `labelTopics`
-  - Find the top three documents associated with each topic. Do these make sense given the words you have used to describe that topic? (Hint: in the estimated `stm` object, the document-topic probabilities are stored in `theta`) Report the top speeches for one selected topic.
-  - Use the `estimateEffect` and `plot.estimateEffect` functions in the `stm` package to estimate the effect of MP gender on topic usage. On which topics are women, on average, more active? 
+(d) Run a structural topic model for this corpus, using the `gender` variable in the topic prevalence argument. Use the `stm` function to do this. Set the `seed` argument to `stm` to be equal to `123`. Be aware, this takes about 5 minutes to run on Jack's iMac -- for testing purposes you might want to set the maximum iterations for the stm to be some low number (`max.em.its = 10` for instance). Remember, you will need to select a value for `K` (I have used `K = 20`).
 
-(If you get stuck on this question, there is some example code in Jack's lecture notes. Also, the `stm` documentation is very good!)
+    Specify and estimate the `stm` model:
+
+
+    Plot the estimated topic model using the `plot()` function on your estimated topic model:
+
+(e) Examine the top words from each topic (see the `labelTopics()` function help file).
+
+(f) Find the top three documents associated with each topic. Do these make sense given the words you have used to describe that topic? In the estimated `stm` object, the document-topic probabilities are stored in `theta`. You will need to extract these probabilities, and then, for each topic, find the documents with the highest scores (the `order()` function might be helpful here). Report the top speeches for one selected topic.
+
+(g) Use the `estimateEffect` and `plot.estimateEffect` functions in the `stm` package to estimate the effect of MP gender on topic usage. On which topics are women, on average, more active? 
+
+    Hint: `estimateEffect` takes three main arguments. 
+
+    1) `formula`, which specifies the model for the topic proportions. You do not need to specify the dependent variable here (i.e. the topic proportions) as R will infer that automatically, so you just need a formula of the form `~ independent_variable`
+    2) `stmobj`, which is just the estimated model output from the `stm()` function
+    3) `metadata`, which is the data.frame that contains the relevant covariates (try `docvars(my_dfm)`)
+  
+    `plot.estimateEffect` takes a large number of options which affect the presentation of the results. Look at `?plot.estimateEffect` for more details.
 
 ## Topic modelling of movie reviews
 
-**movies corpus**.  Here we will use the very impressive `LDAvis` library in conjunction with the `lda::lda.collapsed.gibbs.sampler()` function from the `lda` package. The following code is used to demonstate how the parliamentary speeches interactive visualisation example was created for in the lecture. Your task is to implement this for the `movies` corpus.
+2.  **movies corpus**.  Here we will use the very impressive `LDAvis` library in conjunction with the `lda::lda.collapsed.gibbs.sampler()` function from the `lda` package. The following code is used to demonstate how the parliamentary speeches interactive visualisation example was created for in the lecture. Your task is to implement this for the `movies` corpus.
 
 First we construct the relevant `dfm` and estimate the `lda` model.
 ```{r, eval=FALSE}
 ## Create a corpus of speeches
-speechCorpus <- corpus(speeches$speech)
+speechCorpus <- corpus(speeches, text_field = "speech")
+
+## Convert to a tokens object
+speechTokens <- tokens(speechCorpus, remove_punct = TRUE, remove_numbers = TRUE)
 
 ## Convert to dfm, removing some words that appear very regularly
-speechDfm <- dfm(speechCorpus, remove = c(stopwords("english"), "will", "hon", "right","people","government","can","friend","house","gentleman","said", "interruption", "prime", "minister", "secretary", "state"), stem = F)
+speechDfm <- dfm(speechTokens) %>%
+  dfm_remove(pattern = c(stopwords("en"), "will", "hon", "right", "people", "government", 
+                  "can", "friend", "house", "gentleman", "said", "interruption", 
+                  "prime", "minister", "secretary", "state"))
 
 ## Trim some rarely occuring words
-speechDfm <- dfm_trim(speechDfm, min_termfreq = 15, min_docfreq = 0.0015, docfreq_type = "prop")
+speechDfm <- dfm_trim(speechDfm, min_termfreq = 15, 
+                      min_docfreq = 0.0015, docfreq_type = "prop")
 
 # Convert to lda format
 speechDfmlda <- convert(speechDfm, to = "lda")
@@ -73,20 +89,16 @@ G <- 2000 # Number of iterations
 alpha <- 0.02 # Prior for topic proportions
 eta <- 0.02 # Prior for topic distributions
 
-# # Don't run!
-# # Fit the model
+# Fit the model
 t1 <- Sys.time() # Start timer
 
-fit <- lda.collapsed.gibbs.sampler(documents = speechDfmlda$documents, K = K,
-                                        vocab = speechDfmlda$vocab,
-                                       num.iterations = G, alpha = alpha,
-                                      eta = eta, initial = NULL, burnin = 0,
-                                       compute.log.likelihood = TRUE)
- t2 <- Sys.time() # End timer
- 
- t2 - t1  # about 10 minutes on Jack's MacBook Pro
-
-
+fit <- lda.collapsed.gibbs.sampler(documents = speechDfmlda$documents, K = K, 
+                                   vocab = speechDfmlda$vocab, 
+                                   num.iterations = G, alpha = alpha, 
+                                   eta = eta, initial = NULL, burnin = 0,
+                                   compute.log.likelihood = TRUE)
+t2 <- Sys.time() # End timer
+t2 - t1  # about 5 minutes on Jack's iMac
 ```
 
 Now we plot the model using `LDAvis`.
@@ -97,20 +109,25 @@ library(LDAvis)
 json <- createJSON(phi = t(apply(t(fit$topics) + eta, 2, function(x) x/sum(x))), 
                    theta = t(apply(fit$document_sums + alpha, 2, function(x) x/sum(x))), 
                    doc.length = ntoken(speechDfm), 
-                   vocab = colnames(speechDfm), 
+                   vocab = featnames(speechDfm), 
                    term.frequency = colSums(speechDfm))
+        
 serVis(json, out.dir = "exampleVis", open.browser = TRUE)
 ```
 
-1. You will need to load the data from the `quanteda.corpora` package which is hosted on GitHub: 
+(a) You will need to load the data from the `quantedaData` package which is hosted on Ken's GitHub page (you may need to install the package first):
     
 ```{r}
-library(devtools)
-#install_github("quanteda/quanteda.corpora") # Only run this line if you didn't already install this yesterday!
-data(data_corpus_movies, package = "quanteda.corpora")
+#remotes::install_github("kbenoit/quantedaData")
+data(data_corpus_movies, package = "quantedaData")
 ```
     
-2. Adapt the code above to produce an interactive visualisation of the `movies` corpus. 
+(b) Adapt the code above to produce an interactive visualisation of the `movies` corpus. 
     
-3. Describe a few topics as you see them.  Is there a "scary movie" topic?  Is there a "science fiction" topic?  Figure out how to convert the interactive plot into a static figure, and include these in your answer.
+(c) Describe a few topics as you see them.  Is there a "scary movie" topic?  Is there a "science fiction" topic?  
+
+(d) Use the estimated document probabilities to extract the text of one movie from the topic that most appeals to you. Would you want to watch that movie? Your answer will clearly reveal something about your personality.
+
+    The output of `lda.collapsed.gibbs.sampler()` doesn't actually include the topic proportions for each document. Instead, the `fit$document_sums` element includes the number of times that each word in each document (columns) were assigned to each topic (rows). To translate these into proportions, we need to divide the word count for each document by the total number of words in the document. Rather than doing this row by row, try using the `apply()` function to apply the same calculation to every column in the matrix. See `?apply()` for more help on this.
     
+    To get the top scoring words for each topic, use the `top.topic.words()` function (see the help file for more information).
