--- a/ME314_assignment11.Rmd
+++ b/ME314_assignment11.Rmd
@@ -3,126 +3,111 @@ title: "Assignment 11 - Topic Models"
 author: "Jack Blumenau"
 output: html_document
 ---
+## Topic Models of Human Rights Reports
 
-You will need to load the following libraries (you may also want to set the random number seed to make everything replicable):
-```{r, eval=T, message = F}
-library(quanteda)
-library(topicmodels)
-library(LDAvis)
+The US State Department has produced regular reports on human rights practices across the world for many years. These monitoring reports play an important role both in the international human rights regime and in the production of human rights data. In a paper published in 2018, [Benjamin Baozzi and Daniel Berliner](https://doi.org/10.1017/psrm.2016.44) analyse these reports in order to identify a set of topics and describe how these vary over time and space.
+
+In today's seminar, we will analyse the US State Department's annual Country Reports on Human Rights Practices (1977--2012), by applying structural topic models (STMs) to identify the underlying topics of attention and scrutiny across the entire corpus and in each individual report. We will also assess the extent to which the prevalence of different topics in the corpus is related to covariates pertaining to each countries' relationship with the US.
+
+## Packages
+
+You will need to load the following packages before beginning the assignment
+
+```{r, echo = TRUE, eval=TRUE, message=FALSE, warning=FALSE}
 library(stm)
-library(knitr)
-library(lda)
-library(servr)
-set.seed(221186)
+library(tidyverse)
+library(quanteda)
+# If you cannot load these libraries, try installing them first. E.g.: 
+# install.packages("stm")
 ```
 
-## Topic modelling of parliamentary speeches
+## Data
 
-In this question we are going to use topic modelling to understand how parliamentary speech varies by the gender of the MP. We will be working with a corpus of speeches made by legislators in the UK House of Commons in the 2014 calandar year. 
+Today we will use data on 4067 Human Rights Reports from the US State Department. The table below describes some of the variables included in the data:
 
-You will need to make sure that the file `hoc_speeches.Rdata` is in your current working directory, and then use the following command to read this data into `R`.
+| Variable         | Description                                                                                               |
+|:-------------------|:---------------------------------------------------|
+| `cname`          | The name of the country which is the subject of the report                                                |
+| `year`           | The year of the report                                                                                    |
+| `report`         | The text of the report (note that these texts have already been stemmed and stop words have been removed) |
+| `alliance`       | Whether the country has a formal military alliance with the United States (1) or not (0).                 |
+| `p_polity2`      | The polity score for the country                                                                          |
+| `logus_aid_econ` | The (log) level of foreign aid provided to the country by the US.                                         |
+| `oecd`           | OECD membership dummy                                                                                     |
+| `civil_war`      | Civil war dummy                                                                                           |
 
-```{r, eval = FALSE, message = FALSE, echo = TRUE}
-load("hoc_speeches.Rdata")
-```
- 
-(a) Inspect the `data.frame` object `speeches` and produce some summary statistics.
+: Variables in the `human_rights` data.
 
-(b) Use the functions in the `quanteda` package to turn this data into a `corpus` object.
+This data is not stored on GitHub because the file is to large. Instead, you will need to download it from [this Dropbox link](https://dl.dropboxusercontent.com/s/dv4dp6mpzi9lbbo/human_rights_reports.csv?dl=0).
 
-(c) Turn this corpus into a tokens object and then into a document-feature matrix. At a minimum, you should remove punctuation and numbers from the texts when constructing the `tokens` object (`remove_punct =T` & `remove_numbers = T`) but you may also want to do some additional pre-processing if you don't want to wait days for your topic model to coverge. Think about some of the following:
- 
-    (i) Unigrams? 
-    (ii) Stopwords?
-    (iii) Stemming?
-    (iv) Very infrequent words?
+Once you have downloaded the file and stored it somewhere sensible, you can load it into R:
 
-(d) Run a structural topic model for this corpus, using the `gender` variable in the topic prevalence argument. Use the `stm` function to do this. Set the `seed` argument to `stm` to be equal to `123`. Be aware, this takes about 3 minutes to run on Jack's iMac -- for testing purposes you might want to set the maximum iterations for the stm to be some low number (`max.em.its = 10` for instance). Remember, you will need to select a value for `K` (I have used `K = 20`).
+```{r, echo = TRUE, eval = TRUE}
 
-(e) Examine the top words from each topic (see the `labelTopics()` function help file).
+human_rights <- read_csv("human_rights_reports.csv")
 
-(f) Find the top three documents associated with each topic. Do these make sense given the words you have used to describe that topic? In the estimated `stm` object, the document-topic probabilities are stored in `theta`. You will need to extract these probabilities, and then, for each topic, find the documents with the highest scores (the `order()` function might be helpful here). Report the top speeches for one selected topic.
-
-(g) Use the `estimateEffect` and `plot.estimateEffect` functions in the `stm` package to estimate the effect of MP gender on topic usage. On which topics are women, on average, more active? 
-
-    Hint: `estimateEffect` takes three main arguments. 
-
-    1) `formula`, which specifies the model for the topic proportions. You do not need to specify the dependent variable here (i.e. the topic proportions) as R will infer that automatically, so you just need a formula of the form `~ independent_variable`
-    2) `stmobj`, which is just the estimated model output from the `stm()` function
-    3) `metadata`, which is the data.frame that contains the relevant covariates (try `docvars(my_dfm)`)
-  
-    `plot.estimateEffect` takes a large number of options which affect the presentation of the results. Look at `?plot.estimateEffect` for more details.
-
-## Topic modelling of movie reviews
-
-2.  **movies corpus**.  Here we will use the very impressive `LDAvis` library in conjunction with the `lda::lda.collapsed.gibbs.sampler()` function from the `lda` package. The following code is used to demonstate how the parliamentary speeches interactive visualisation example was created for in the lecture. Your task is to implement this for the `movies` corpus.
-
-First we construct the relevant `dfm` and estimate the `lda` model.
-```{r, eval=FALSE}
-## Create a corpus of speeches
-speechCorpus <- corpus(speeches, text_field = "speech")
-
-## Convert to a tokens object
-speechTokens <- tokens(speechCorpus, remove_punct = TRUE, remove_numbers = TRUE)
-
-## Convert to dfm, removing some words that appear very regularly
-speechDfm <- dfm(speechTokens) %>%
-  dfm_remove(pattern = c(stopwords("en"), "will", "hon", "right", "people", "government", 
-                  "can", "friend", "house", "gentleman", "said", "interruption", 
-                  "prime", "minister", "secretary", "state"))
-
-## Trim some rarely occuring words
-speechDfm <- dfm_trim(speechDfm, min_termfreq = 15, 
-                      min_docfreq = 0.0015, docfreq_type = "prop")
-
-# Convert to lda format
-speechDfmlda <- convert(speechDfm, to = "lda")
-
-# MCMC and model tuning parameters:
-K <- 30 # Number of topics
-G <- 2000 # Number of iterations
-alpha <- 0.02 # Prior for topic proportions
-eta <- 0.02 # Prior for topic distributions
-
-# Fit the model
-t1 <- Sys.time() # Start timer
-
-fit <- lda.collapsed.gibbs.sampler(documents = speechDfmlda$documents, K = K, 
-                                   vocab = speechDfmlda$vocab, 
-                                   num.iterations = G, alpha = alpha, 
-                                   eta = eta, initial = NULL, burnin = 0,
-                                   compute.log.likelihood = TRUE)
-t2 <- Sys.time() # End timer
-t2 - t1  # about 7 minutes on Jack's iMac
 ```
 
-Now we plot the model using `LDAvis`.
+You can take a quick look at the variables in the data by using the `glimpse()` function from the `tidyverse` package:
 
-```{r, eval=FALSE}
-library(LDAvis)
-# create the JSON object to feed the visualization:
-json <- createJSON(phi = t(apply(t(fit$topics) + eta, 2, function(x) x/sum(x))), 
-                   theta = t(apply(fit$document_sums + alpha, 2, function(x) x/sum(x))), 
-                   doc.length = ntoken(speechDfm), 
-                   vocab = featnames(speechDfm), 
-                   term.frequency = colSums(speechDfm))
-        
-serVis(json, out.dir = "exampleVis", open.browser = TRUE)
+```{r, echo = TRUE, eval = TRUE}
+
+glimpse(human_rights)
+
 ```
 
-(a) You will need to load the data from the `quantedaData` package which is hosted on Ken's GitHub page (you may need to install the package first):
-    
-```{r}
-#remotes::install_github("kbenoit/quantedaData")
-data(data_corpus_movies, package = "quantedaData")
-```
-    
-(b) Adapt the code above to produce an interactive visualisation of the `movies` corpus. 
-    
-(c) Describe a few topics as you see them.  Is there a "scary movie" topic?  Is there a "science fiction" topic?  
+## STM without covariates
 
-(d) Use the estimated document probabilities to extract the text of one movie from the topic that most appeals to you. Would you want to watch that movie? Your answer will clearly reveal something about your personality.
+We will begin by implementing the null model of the Structural Topic Model. This model is equivalent to the Correlated Topic Model -- a close cousin of the LDA model that we covered in the lecture, though one in which the topics in the corpus are allowed to be correlated with each other (LDA assumes that topics are uncorrelated).
 
-The output of `lda.collapsed.gibbs.sampler()` doesn't actually include the topic proportions for each document. Instead, the `fit$document_sums` element includes the number of times that each word in each document (columns) were assigned to each topic (rows). To translate these into proportions, we need to divide the word count for each document by the total number of words in the document. Rather than doing this row by row, try using the `apply()` function to apply the same calculation to every column in the matrix. See `?apply()` for more help on this.
-    
-To get the top scoring words for each topic, use the `top.topic.words()` function (see the help file for more information).
+The `stm()` function from the `stm` package can be used to fit the model. There are a few different arguments that you will need to specify for this function:
+
+| Argument     | Description                                                                                                                         |
+|:-------------------|:---------------------------------------------------|
+| `documents`  | The DFM on which you intend to fit the stm model.                                                                                   |
+| `K`          | The number of topics you wish to estimate.                                                                                          |
+| `prevalence` | A formula (with no response variable) specifying the covariates you wish to use to model the topic prevalences across documents.    |
+| `content`    | A formula (with no response variable) specifying the covariate you wish to use to model the content of each topic across documents. |
+| `seed`       | A seed number to make the results replicable.                                                                                       |
+
+: Arguments to the `stm` function.
+
+1.  Create a corpus from the `human_rights` data. Then create a dfm, making some feature selection decisions.
+
+*Note*: Topic models can take a long time to estimate so I would advise that you trim the DFM to keep it reasonably small for now.
+
+2.  Use the `stm()` function from the `stm` package to fit a topic model. Choose an appropriate number of topics. You should not use any covariates in answer to this question. As the STM model will take a while to run (probably a minute or two), you should make sure you save the output of the model so that you don't need to run this code repeatedly.
+
+3.  Use the `plot()` function to assess how common each topic is in this corpus. What is the most common topic? What is the least common?
+
+4.  Use the `labelTopics()` function to extract the most distinctive words for each topic. Do some interpretation of these topic "labels".[^seminar7-2] Is there a sexual violence topic? Is there a topic about electoral manipulation? Create two word clouds illustrating two of the most interesting topics using the `cloud()` function.
+
+*Note*: The `stm` package provides various different metrics for weighting words in estimated topic models. The most relevant two for our purposes are `Highest Prob` and `FREX`. `Highest Prob` simply reports the words that have the highest probability within each topic (i.e. inferred directly from the $\beta$ parameters). `FREX` is a weighting that takes into account both frequency and exclusivity (words are upweighted when they are common in one topic but uncommon in other topics).
+
+5.  Access the document-level topic-proportions from the estimated STM object (use `stm_out$theta`). How many rows does this matrix have? How many columns? What do the rows and columns represent?
+
+6.  Pick one of the topics and plot it against the `year` variable from the `human_rights` data. What does this plot suggest?
+
+## STM with covariates
+
+1.  A key innovation of the stm is that it allows us to include arbitrary covariates into the text model, allowing us to assess the degree to which topics vary with document metadata. In this question, you should fit another stm, this time including a covariate in the `prevalence` argument. You can pick any covariate that you think is likely to show interesting relationships with the estimated topics. Again, remember to save your model output so that you don't need to estimate the model more than once.
+
+2.  We will want to be able to keep track of the estimated topics from this model for use in the plotting functions later. Create a vector of topic labels from the words with the highest `"frex"` scores for each topic.
+
+3.  Use the `estimateEffect()` function to estimate differences in topic usage by one of the covariates in the `human_rights` data. This function takes three main arguments:
+
+| Argument   | Description                                                                                                                                                                                |
+|:-------------------|:---------------------------------------------------|
+| `formula`  | A formula for the regression. Should be of the form `c(1,2,3) ~ covariate_name`, where the numbers on the left-hand side indicate the topics for which you would like to estimate effects. |
+| `stmobj`   | The model output from the `stm()` function.                                                                                                                                                |
+| `metadata` | A `data.frame` where the covariates are to be found. You can use `docvars(my_dfm)` for the `dfm` you used to estimate the original model.                                                  |
+
+: Arguments to the `estimateEffect` function.
+
+
+4.  Use the `summary()` function to extract the estimated regression coefficients. For which topics do you find evidence of a significant relationship with the covariate you selected?
+
+5.  Plot some of the more interesting differences that you just estimated using the `plot.estimateEffect()` function. There are various different arguments that you can provide to this function. See the help file for assistance here (`?plot.estimateEffect`).
+
+6. Fit an STM model which allows the *content* of the topics to vary by one of the covariates in the data. You can do so by making use of the `content` argument to the `stm()` function (see the lecture slides for an example). Once you have estimated the model, inspect the output and create at least one plot which demonstrates how word use for a given topic differs for the covariate you included in the model. (Note: The use of the `content()` argument can cause the model to take a long time to converge so you will need to be patient!)
+
